<resources>
    <string name="app_name">Pisen Cloud</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="record_dialog_title">是否保存录音文件 ？</string>
    <string name="record_dialog_button_ok">确定</string>
    <string name="redord_dialog_button_cancel">取消</string>
    <string name="redord_dialog_message">是否保存录音文件</string>
    <string name="download_ing_count">下载中（%1$d）</string>
    <string name="upload_ing_count">上传中（%1$d）</string>
    <string name="transfer_complete_count">已完成（%1$d）</string>
    <string name="transfer_selected_count">已选定 %1$d 个</string>
    <string name="transfer_download_path">文件下载至：%1$s</string>
    <string name="transfer_help_first">第一步:</string>
    <string name="transfer_help_shark">请苹果设备%1$s寻找朋友</string>
    <string name="transfer_help_second">第二步:</string>
    <string name="transfer_help_third">第三步:</string>
    <string name="img_download">下载</string>
    <string name="img_delete">删除</string>
    <string name="img_detail">详情</string>
    <string name="dev_unconnected">设备未连接</string>
    <string name="dev_requesting">正在获取…</string>
    <string name="dev_wifi_connected">[已连接]</string>
    <string name="dev_search_timeout">扫描设备超时</string>
    <string name="dev_unconnected_tip">设备未连接，请先连接设备</string>
    <string name="dev_requesting_devmode">正在获取设备型号</string>
    <string name="dev_switch">切换设备</string>
    <string name="dev_shutdown">关闭设备</string>
    <string name="dev_restart">重启设备</string>
    <string name="dev_setwifi">WIFI设置</string>
    <string name="dev_setconnect">联网设置</string>
    <string name="dev_storage_space">存储空间</string>
    <string name="dev_firmware_upgrade">固件升级</string>
    <string name="dev_ssid">SSID</string>
    <string name="dev_reset">恢复出厂</string>
    <string name="dev_router_mgr">路由器管理</string>
    <string name="dev_upgrade_checkup">检查更新</string>
    <string name="dev_upgrade_download">下载更新</string>
    <string name="dev_upgrade_execute">立即更新</string>
    <string name="dev_upgrade_execute_tip">1.升级前，请保证设备有充足电量,升级过程中保证设备不断电。\n2.升级中,不要重启或关闭设备。\n3.固件升级过程可能需要3-5分钟，请耐心等待。</string>
    <string name="dev_upgrade_execute_wait">正在进行固件升级\n请在路由器蓝灯停止闪烁后重新连接</string>
    <string name="dev_upgrade">检查是否有最新固件可升级</string>
    <string name="dev_default_deviceLoginPwd">请输入您的管理密码</string>
    <string name="flashtransfer_selected_count">闪电互传(%1$s)</string>
    <string name="flashtransfer_count_music">共%1$s首音乐</string>
    <string name="flashtransfer_count_file">共%1$s个文件</string>
    <string name="flashtransfer_count_apk">共%1$s个应用</string>
    <string name="teleplay_no_router">不是您打开的方式不对\n是真心没有找到您的追剧设备\n您还可以选择:</string>
    <string name="settings_navigation">更多通用导航</string>
    <string name="settings_submit">提交</string>
    <string name="settings_home_nick_name">请输入昵称</string>
    <string name="settings_home_weixin_public_no">微信公众号</string>
    <string name="settings_home_micro_mall">品胜商城</string>
    <string name="settings_home_scan_install">扫码安装</string>
    <string name="settings_home_recommend_friend">推荐给好友</string>
    <string name="settings_home_encourage_us">鼓励一下我们</string>
    <string name="settings_home_help">使用帮助</string>
    <string name="settings_home_more">更多</string>
    <string name="settings_home_about">关于</string>
    <string name="settings_back">返回</string>
    <string name="settings_about_version_update">版本更新</string>
    <string name="settings_about_service_term">服务条款</string>
    <string name="settings_about_contact_customer_service">联系客服</string>
    <string name="settings_about_feedback">意见反馈</string>
    <string name="settings_about_current_version">Pisen Cloud 2.0</string>
    <string name="settings_setting_tv_show">追剧设置</string>
    <string name="settings_setting_newmsg_recv">接收新消息提醒</string>
    <string name="settings_setting_exchanging_auto_recv">闪电互传自动接收</string>
    <string name="settings_setting_exchanging_auto_lead_pic">闪电互传自动导入图片</string>
    <string name="settings_setting_exchanging_auto_lead_video">闪电互传自动导入视频</string>
    <string name="settings_setting_clear_cache">清空缓存</string>
    <string name="settings_setting_auto_compute_cache">自动计算缓存</string>
    <string name="settings_setting_feedback_advise">请输入您的意见或建议，这将对我们意义非凡......</string>
    <string name="settings_setting_feedback_name">您的姓名(选填)</string>
    <string name="settings_setting_feedback_email">邮箱或手机号(选填)</string>
    <string name="settings_weixin_public_no">扫描二维码即可关注品胜官方微信</string>
    <string name="settings_scan_install">扫描二维码直接下载PisenCloud</string>
    <string name="network_disconnect">您的网络不太顺畅哦~</string>
    <string name="settings_pls_input_nickname">请输入昵称</string>
    <string name="settings_setting_shared">"【全新路由器App体验】 下载了#Pisen Cloud#，拥有云分享、云音乐、云视频及即拍即传等特色功能，要了解更多实用功能，请@品胜电子 。下载地址 ：http://cloud.pisen.com.cn/Mobile/Home/CloudIndex"</string>
    <string name="settings_setting_shared_test">"【全新路由器App体验】下载了#Pisen Cloud#,拥有云分享、云音乐、云视频及即拍即传等特色功能,要了解更多实用功能,请@品胜电子 。下载地址 ：http://cloud.pisen.com.cn/App/PisenCloudBeta"</string>
    <string name="welcome_experience_immediately">立即体验</string>
    <string name="welcome_version">Pisen Cloud %1$s</string>
    <string name="UiVersion">1.0.1</string>
    <string name="vitamio_library_app_name">VitamioLibrary</string>
    <string name="vitamio_init_decoders">初始化中...</string>
    <string name="vitamio_init_decoders_failed">初始化失败</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers.</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
        this device.</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="intro_text">Touch to focus, and press the blue camera button to take photos. For more help, click Online help from Settings. Open Camera is completely free. If you like this app, please consider buying my donate app :) (see link in Settings, or Online help).\n\nPrivacy Policy: Location permission is required for geotagging, but this is disabled by default. If enabled, your location is encoded in the saved files (and it is only used for this purpose).\n\n(This message won\'t show again.)</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="stopped_recording_video">Stopped recording video</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="video_may_be_corrupted">Error, video file may be corrupted</string>
    <string name="not_supported">not supported on your device</string>
    <string name="video_error_unknown">Unknown error, video halted</string>
    <string name="video_error_server_died">Server died, video halted</string>
    <string name="video_max_duration">Video reached max duration</string>
    <string name="video_max_filesize">Video reached max filesize</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="exposure_locked">Exposure Locked</string>
    <string name="exposure_unlocked">Exposure unlocked</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="started_timer">Started timer</string>
    <string name="failed_to_save_video">Failed to save video file</string>
    <string name="failed_to_record_video">Failed to record video</string>
    <string name="started_recording_video">Started recording video</string>
    <string name="sorry">Sorry</string>
    <string name="failed_to_save_image">Failed to save image file</string>
    <string name="failed_to_save_photo">Failed to save photo</string>
    <string name="taking_photo">Taking photo</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="no_gallery_app">No gallery app available</string>
    <string name="screen_is_locked">Screen is locked - swipe the screen to unlock</string>
    <string name="unlocked">Unlocked</string>
    <string name="angle">Angle</string>
    <string name="direction">Direction</string>
    <string name="failed_to_open_camera_1">FAILED TO OPEN CAMERA.</string>
    <string name="failed_to_open_camera_2">CAMERA MAY BE IN USE</string>
    <string name="failed_to_open_camera_3">BY ANOTHER APPLICATION?</string>
    <string name="zoom">Zoom</string>
    <string name="free_memory">Free memory</string>
    <string name="screen_lock_message">[LOCKED: Swipe to unlock]</string>
    <string name="preference_category_camera_effects">Camera Effects</string>
    <string name="preference_auto_stabilise">Auto-stabilise</string>
    <string name="preference_auto_stabilise_summary">Images will be rotated so they are automatically level (photos only) (slower to take photos, and may fail on devices with too low memory)</string>
    <string name="preference_color_effect">Apply a color effect</string>
    <string name="preference_color_effect_summary">Applies the selected color effect to the photo</string>
    <string name="preference_scene_mode">Apply a scene mode</string>
    <string name="preference_scene_mode_summary">Optimise the photo for different scenes</string>
    <string name="preference_white_balance">Set the white balance</string>
    <string name="preference_white_balance_summary">Choose a setting to adjust the white balance</string>
    <string name="preference_iso">Set the ISO</string>
    <string name="preference_iso_summary">A higher value means more sensitive to light (may not work on some devices)</string>
    <string name="preference_exposure">Set the exposure compensation</string>
    <string name="preference_exposure_summary">Set to 0 for the default exposure compensation.</string>
    <string name="preference_lock_orientation">Lock photo/video orientation</string>
    <string name="preference_lock_orientation_summary">If set, the orientation of the device will be ignored, and the orientation of the photo/video will be with respect to the specified orientation.</string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_face_detection_summary">Use face detection instead of focus areas.</string>
    <string name="appupgrade_text_upgrade">品胜云版本升级</string>
    <string name="appupgrade_text_newapp">品胜云已经推出最新App版本</string>
    <string name="appupgrade_text_upgradebutton">一键升级</string>
    <string name="appupgrade_text_downloading">正在下载最新版本安装包</string>
    <string name="appupgrade_text_downloadfail">Oops! 固件更新失败!</string>
    <string name="appupgrade_text_retrybutton">重试</string>
    <string name="appupgrade_text_downloading_pgb">App下载中</string>
</resources>