<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp"
        >
        <LinearLayout 
        	android:layout_width="match_parent"
       	 	android:layout_height="wrap_content"
        	android:orientation="vertical"
            >
       		<TextView 
          		 android:layout_width="wrap_content"
          		 android:layout_height="wrap_content"
          		 android:text="@string/transfer_help_first"
           		 android:textSize="20sp"
           		 android:textColor="@color/black"
                 />
       		 <TextView
           		android:id="@+id/txtShark" 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/transfer_help_shark"
            	/>
        	<ImageView
        	    android:layout_marginTop="10dp"
        		android:layout_width="match_parent"
       			android:layout_height="wrap_content"
        		android:contentDescription="@string/app_name"
        		android:src="@drawable/flashtransfer_connect_iphone_same_wifi_1" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_marginTop="10dp" 
        	android:layout_width="match_parent"
       	 	android:layout_height="wrap_content"
        	android:orientation="vertical"
            >
       		<TextView 
          		 android:layout_width="wrap_content"
          		 android:layout_height="wrap_content"
          		 android:text="@string/transfer_help_second"
           		 android:textSize="20sp"
           		 android:textColor="@color/black"
                 />
       		 <TextView
           		android:id="@+id/txtSeach" 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/transfer_help_shark"
            	/>
        	<ImageView
        	    android:layout_marginTop="10dp"
        		android:layout_width="match_parent"
       			android:layout_height="wrap_content"
        		android:contentDescription="@string/app_name"
        		android:src="@drawable/flashtransfer_connect_iphone_same_wifi_2" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
