<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/leftMenu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/headLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="45dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtDevice"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/menu_ic_device_connected" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtDeviceMode"
                    style="@style/TextView.MenuTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/dev_unconnected" />

                <TextView
                    android:id="@+id/txtWifiSsid"
                    style="@style/TextView.MenuTitle2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/equipment_wifi_on"
                    android:drawablePadding="5dp"
                    android:ellipsize="marquee" 
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:visibility="gone"
                    android:text="@string/dev_ssid" />

                <TextView
                    android:id="@+id/txtDeviceSwitch"
                    style="@style/TextView.MenuTitle3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/dev_switch" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuBottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="60dp"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:visibility="visible" >

            <TextView
                android:id="@+id/txtShutdown"
                style="@style/TextView.MenuItem2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/menu_ic_shutdown"
                android:text="@string/dev_shutdown"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtRestart"
                style="@style/TextView.MenuItem2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/menu_ic_restart"
                android:text="@string/dev_restart" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuNewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/menuBottomLayout"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/headLayout"
            android:layout_centerVertical="true"
            android:divider="#33FFFFFF"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="30dp"
            android:showDividers="middle"
            android:visibility="visible" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#33FFFFFF" />

            <TextView
                android:id="@+id/txtWifi"
                style="@style/TextView.MenuItem"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/menu_ic_wifi"
                android:text="@string/dev_setwifi" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#33FFFFFF" />

            <TextView
                android:id="@+id/txtNetwork"
                style="@style/TextView.MenuItem"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/menu_ic_network"
                android:text="@string/dev_setconnect" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#33FFFFFF" />

            <TextView
                android:id="@+id/txtStorage"
                style="@style/TextView.MenuItem"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/menu_ic_storage"
                android:text="@string/dev_storage_space" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#33FFFFFF" />

            <TextView
                android:id="@+id/txtUpgrade"
                style="@style/TextView.MenuItem"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/menu_ic_upgrade"
                android:text="@string/dev_firmware_upgrade" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#33FFFFFF" />

            <TextView
                android:id="@+id/txtFactoryReset"
                style="@style/TextView.MenuItem"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/menu_ic_factory_rest"
                android:text="@string/dev_reset" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="35dp"
                android:background="#33FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuOldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/headLayout"
            android:layout_centerVertical="true"
            android:divider="#33FFFFFF"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="30dp"
            android:showDividers="middle"
            android:visibility="gone" >

            <TextView
                android:id="@+id/txtRouterOld"
                style="@style/TextView.MenuItem"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/menu_ic_network"
                android:text="@string/dev_router_mgr" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="46dp"
                android:background="#33FFFFFF" />

            <TextView
                android:id="@+id/txtStorageOld"
                style="@style/TextView.MenuItem"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/menu_ic_storage"
                android:text="@string/dev_storage_space" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>