<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:orientation="vertical" 
    >
	
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@drawable/settings_line_shape"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical" 
        android:gravity="center"
        android:background="#086CEF"
        >
        
       <TextView 
            android:id="@+id/txtVersionUpdate"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:drawableTop="@drawable/cloud_settings_logo"
        	android:drawablePadding="2dp"
        	android:textColor="#ffff"
        	android:text="@string/settings_about_current_version"
        	android:gravity="center"
        />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0"
        >
       
      	<TableRow
             android:id="@+id/ltrow_version_update"
             style="@style/item_bg_single_layout_top"
             >
             <RelativeLayout 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 >
             <TextView
                 android:id="@+id/tv_about_ver_update"
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
                 android:paddingLeft="14dp"
                 android:textSize="16sp"
                 android:textColor="@color/setting_item_text_color"
                 android:gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/settings_about_version_update" />

             <ImageView
                 android:id="@+id/img_ver_update_mark"
                 android:contentDescription="@string/app_name"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/tv_about_ver_update"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/upgrade_reddot_mark" 
                 android:paddingTop="10dp"
                 android:paddingLeft="0dp"
                 android:visibility="gone"
                 />
			</RelativeLayout>
             
             <TextView
                 style="@style/TextView.SettingsItemArrow"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent" />
         </TableRow>
        <include layout="@layout/cloud_settings_item_space_line"/>
      	<TableRow
             android:id="@+id/ltrow_service_term"
             style="@style/item_bg_single_layout_normal"
             >
             <TextView
                 android:id="@+id/tv_about_service_term"
                 style="@style/TextView.SettingsItemTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:drawablePadding="5dp"
                 android:text="@string/settings_about_service_term" />

             <TextView
                 style="@style/TextView.SettingsItemArrow"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent" />
         </TableRow>
        <include layout="@layout/cloud_settings_item_space_line"/>
        <TableRow
             android:id="@+id/ltrow_contact_customer_service"
             style="@style/item_bg_single_layout_normal"
             >
             <TextView
                 android:id="@+id/tv_about_contact_customer_service"
                 style="@style/TextView.SettingsItemTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:drawablePadding="5dp"
                 android:text="@string/settings_about_contact_customer_service" />

             <TextView
                 style="@style/TextView.SettingsItemArrow"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent" />
         </TableRow>
        <include layout="@layout/cloud_settings_item_space_line"/>
      	<TableRow
             android:id="@+id/ltrow_about_feedback"
             style="@style/item_bg_single_layout_bottom"
             >

             <TextView
                 android:id="@+id/tv_about_feedback"
                 style="@style/TextView.SettingsItemTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:drawablePadding="5dp"
                 android:text="@string/settings_about_feedback" />

             <TextView
                 style="@style/TextView.SettingsItemArrow"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent" />
         </TableRow>
    </TableLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#F9F9F9"
        />
</LinearLayout>